# Cocktail-Recommendation

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: app.py  data_preprocessing.py  database_setup.py  debug.py  quick_start.py  recommender.py
